<resources>
    <string name="app_name">MySmartHouse2</string>
    <string name="no_file_name">Профиль отсутствует</string>
    <string name="error_read">Ошибка чтения файла профиля</string>
    <string name="no_close_file">Ошибка при закрытии файла профиля</string>
    <string name="error_write">Ошибка записи файла профиля</string>
    <string name="tab_text_1">Главная</string>
    <string name="tab_text_2">Охрана</string>
    <string name="tab_text_3">Климат</string>
    <string name="tab_text_4">Свет</string>
    <string name="tab_text_5">Полив</string>
    <string name="StatusBar">Строка состояния:</string>
    <string name="pic">House</string>
    <string name="devices">USB Devices</string>
    <string name="action_settings">НАСТРОЙКИ</string>
    <string name="rs_settings">RS485</string>
    <string name="number_devices">Наименование устройств</string>
    <string name="editing_messages">Редактирование сообщений</string>
    <string name="climate">Отображение температуры и влажности в помещениях. Управление вкл/выкл отоплением</string>
    <string name="climate_inf">Внимание!Укажите к какому узлу подключен котел (нажмите одну кнопку из колонки справа).
                Нажав на наименование узла, выбираете узел управления котлом.</string>
    <string name="boiler">котел подкл</string>
    <string name="t_clouse">T*C выкл.</string>
    <string name="t_open">T*C вкл.</string>
    <string name="StringClimate">Строка климат</string>
    <string name="Update">обновить</string>
    <string name="temp_default">no</string>
    <string name="attention">Ввод идентификационных данных</string>
    <string name="enter_token">Введите токен бота</string>
    <string name="enter_id">Введите chat_id канала</string>
    <string name="enter">ЗАПИСЬ</string>
    <string name="cancel">ОТМЕНИТЬ</string>
</resources>