<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/text_attention"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attention" />
    <EditText
        android:id="@+id/telegram_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/enter_token"
        android:inputType="text"
        android:autofillHints="" />
    <EditText
        android:id="@+id/telegram_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_id"
        android:inputType="text"
        android:autofillHints="" />
    <Button
        android:id="@+id/button_positive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter" />

    <Button
        android:id="@+id/button_negative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
</LinearLayout>